Snabb fix i filen för JSON Fixes #7

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,8 @@
       </div>
     </div>
     <div class="main flex-center">
-      <button id="button">BOX</button>
+      <button id="boxButton">BOX</button>
       <div id="main-content">
-        <div>
-          <h1></h1>
-        </div>
         </div>
       </div>
     </div>
