--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>B O X E S</title>
-    <link rel="icon" href="./box-archive-solid.svg" type="image/x-icon" />
-    <script
-      src="https://kit.fontawesome.com/34f29b0076.js"
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="./logic.js"></script>
-  </head>
-  <body class="flex-center">
-    <div class="header flex-center">
-      <div class="flex-center">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>B O X E S</title>
+  <link rel="icon" href="./box-archive-solid.svg" type="image/x-icon" />
+  <script src="https://kit.fontawesome.com/34f29b0076.js" crossorigin="anonymous"></script>
+  <script defer src="./logic.js"></script>
+</head>
+
+<body class="flex-center">
+  <div class="header flex-center">
+    <div class="flex-center">
+      <a href="">
         <h1>B <i class="fa-solid fa-box-archive"></i> X E S</h1>
-      </div>
+      </a>
     </div>
-    <div class="main flex-center">
-      <button id="boxButton">BOX</button>
-      <div id="main-content">
-        </div>
-      </div>
+  </div>
+  <div class="main flex-center">
+    <button id="boxButton">GET BOXES</button>
+    <div id="main-content">
     </div>
-    <div class="footer flex-center">
-      <div class="footer-content"><h2>Made by me :)!!!</h2></div>
+  </div>
+  </div>
+  <div class="footer flex-center">
+    <div class="footer-content">
+      <h2>Made by me :)!!!</h2>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
