updates to fetching inputs

--- a/public/boxPage.html
+++ b/public/boxPage.html
@@ -27,7 +27,7 @@
     </div>
     <div class="footer flex-center">
       <div class="footer-content">
-        <h2>Made by me :)!!!</h2>
+        <h2>Made by <a href="https://www.github.com/MiMeiner">MiMeiner</a> </h2>
       </div>
     </div>
   </body>
